[metadata]
# replace with your username:
name = japantrade
version = 0.0.1
author = Francesco Rinarelli
author_email = f.rinarelli@gmail.com
description = Tools to extract and analyze trade data from the Japanese Customs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liapunov/JapanTrade
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src